fix(payment): enforce authoritative payment amounts (#82)
* fix(payment): enforce authoritative payment amounts

Derive payment ownership, amount, currency, and merchant from the stored order. Validate successful gateway callbacks before capture, including idempotent VNPay replays.

* fix(ordering): derive shipping fees from quotes

Remove client-controlled shipping fee fields from order placement and address changes. Quote and validate carrier fees before inventory or voucher side effects, and cover the authoritative fee paths with tests.

* fix(catalog): use the maintained search index

Route legacy keyword search through the populated catalog index with a bounded database fallback. Remove the orphan in-memory index and strengthen shared integration contract assertions.

* fix(security): enforce merchant-owned detail reads

Pass verified caller identity through warehouse and flash-sale detail queries, reject foreign resources, and align warehouse services with the merchant ID already verified by the web adapter.

* fix(core): harden checkout safety boundaries

Compensate aborted order placement, enforce a real voucher reservation lifecycle, and fail closed when GHN webhook authentication is not configured. Add boundary and configuration coverage for each invariant.

* fix(access): enforce verified merchant boundaries

* fix(core): enforce business data invariants

* fix(platform): close retry and boundary gaps

* fix(boundaries): align domain and persistence contracts

* fix(integrity): harden concurrent business updates

* fix(promotions): honor category voucher conditions

* fix(api): enforce bounded pagination contracts

* fix(persistence): bound catalog fallback operations

* fix(concurrency): harden identity and first-row creation

* fix(inventory): serialize destination stock creation

* feat(operations): expose outbox dead-letter recovery

* refactor(api): isolate application result contracts

* fix(payment): make refunds durably idempotent

* fix(settlemen