@@ -18,7 +18,7 @@ import org.springframework.transaction.annotation.Transactional;
 import java.math.BigDecimal;
 import java.time.Duration;
 import java.time.Clock;
-import java.util.Collections;
+import java.util.List;
 
 /**
  * Handles discount calculations and applies/consumes the voucher in the
@@ -38,7 +38,7 @@ public class VoucherApplyAdapter implements VoucherApplyPort {
     @Override
     @Transactional
     public Discount apply(String userId, String merchantId, String voucherCode, String orderId,
-            BigDecimal lineSubtotal, String currency) {
+            BigDecimal lineSubtotal, String currency, List<String> orderCategoryIds) {
         Voucher voucher = voucherRepository.lockByCode(voucherCode).orElse(null);
         if (voucher == null) {
             return new Discount(BigDecimal.ZERO, currency, false, "voucher-not-found");
@@ -47,29 +47,34 @@ public class VoucherApplyAdapter implements VoucherApplyPort {
             return new Discount(BigDecimal.ZERO, currency, false, "voucher-wrong-shop");
         }
 
+        UserVoucher uv = userVoucherRepository.findByUserAndCode(userId, voucherCode).orElse(null);
+        if (uv != null && uv.getStatus() == UserVoucherStatus.APPLIED) {
+            if (orderId.equals(uv.getReservedOrderId()) && uv.getAppliedAmount() != null) {
+                return new Discount(uv.getAppliedAmount().amount(), uv.getAppliedAmount().currency(), true, null);
+            }
+            return new Discount(BigDecimal.ZERO, currency, false, "voucher-already-used");
+        }
+
         // Validate campaign conditions if platform voucher
         if (voucher.getCampaignId() != null) {
             PromotionCampaign campaign = campaignRepository.findById(voucher.getCampaignId()).orElse(null);
             if (campaign != null) {
                 try {
-                    campaign.ensureRunning();
+                    campaign.ensureRunning(clock);
                 } catch (Exception e) {
                     return new Discount(BigDecimal.ZERO, currency, false, "campaign-not-running");
                 }
-                if (!campaign.getCondition().matches(lineSubtotal, Collections.emptyList())) {
+                if (!campaign.getCondition().matches(lineSubtotal,
+                        orderCategoryIds == null ? List.of() : orderCategoryIds)) {
                     return new Discount(BigDecimal.ZERO, currency, false, "campaign-condition-not-met");
                 }
             }
         }
 
         // Check if user already claimed this voucher
-        UserVoucher uv = userVoucherRepository.findByUserAndCode(userId, voucherCode).orElse(null);
         if (uv != null) {
             if (!voucher.isValidNow(clock.instant())) {
                 return new Discount(BigDecimal.ZERO, currency, false, "voucher-not-usable");
-            }
-            if (uv.getStatus() == UserVoucherStatus.APPLIED) {
-                return new Discount(BigDecimal.ZERO, currency, false, "voucher-already-used");
             }
             if (uv.getStatus() == UserVoucherStatus.EXPIRED) {
                 return new Discount(BigDecimal.ZERO, currency, false, "voucher-expired");
@@ -78,8 +83,8 @@ public class VoucherApplyAdapter implements VoucherApplyPort {
             if (!voucher.isUsable(clock.instant())) {
                 return new Discount(BigDecimal.ZERO, currency, false, "voucher-not-usable");
             }
-            voucher.claimSlot();
-            uv = UserVoucher.claim(IdGenerator.ulid(), voucherCode, userId);
+            voucher.claimSlot(clock);
+            uv = UserVoucher.claim(IdGenerator.ulid(), voucherCode, userId, clock);
             userVoucherRepository.save(uv);
         }
 
@@ -89,11 +94,11 @@ public class VoucherApplyAdapter implements VoucherApplyPort {
         }
         String discountCurrency = voucher.getDiscountAmount().currency();
 
-        voucher.reserveSlot();
-        voucher.commitSlot();
+        voucher.reserveSlot(clock);
+        voucher.commitSlot(clock);
 
-        uv.reserve(orderId, clock.instant().plus(Duration.ofMinutes(15)));
-        uv.apply(Money.of(discount, discountCurrency));
+        uv.reserve(orderId, clock.instant().plus(Duration.ofMinutes(15)), clock);
+        uv.apply(Money.of(discount, discountCurrency), clock);
 
         voucherRepository.save(voucher);
         userVoucherRepository.save(uv);
@@ -113,10 +118,14 @@ public class VoucherApplyAdapter implements VoucherApplyPort {
                     }
                     Voucher voucher = voucherRepository.findByCode(uv.getVoucherCode()).orElse(null);
                     if (voucher != null) {
-                        voucher.releaseSlot();
+                        if (uv.getStatus() == UserVoucherStatus.APPLIED) {
+                            voucher.releaseCommittedSlot(clock);
+                        } else {
+                            voucher.releaseSlot(clock);
+                        }
                         voucherRepository.save(voucher);
                     }
-                    uv.release(reason);
+                    uv.release(reason, clock);
                     userVoucherRepository.save(uv);
                 });
     }
